IMPALA-4749: hit DCHECK in sorter with scratch limit

The bug is that on one error path where we don't goto
the cleanup block that all the other error paths use.

Testing:
The test fix for IMPALA-4745 triggers the bug.

Change-Id: Id85b96826f13f74c7c5474b0b50e12229e9d8b4f
Reviewed-on: http://gerrit.cloudera.org:8080/5653
Reviewed-by: Dan Hecht <dhecht@cloudera.com>
Tested-by: Impala Public Jenkins